src/main/resources/public/game.css
body {
  background-color: black;
  margin: 0;
  padding: 0;
  perspective: 1500px;
  perspective-origin: 50%;
  overflow: hidden;
  font-family: Arial, Helvetica, sans-serif;
}

.card {
  position: relative;
  float: left;
  width: 180px;
  height: 250px;
  margin: 5px;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: gray;
  cursor: pointer;
  transition-duration: 0.5s;
}

.card:hover {
  z-index: 100;
}

.summoning-sickness {
  background-image: url("/img/modifiers/summoning-sickness.png");
  width: 120px;
  height: 120px;
  position: absolute;
  left: 25px;
  top: 50px;
}

.frontend-blocking {
  margin-bottom: 100px;
}

.selected-to-be-blocked {
  border: lightskyblue 6px solid;
}

#modal-container {
  z-index: 4;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: .6;
}

#maximized-card {
  z-index: 5;
  position: absolute;
  width: 540px;
  height: 750px;
  left: 50%;
  top: 50%;
  margin-left: -270px;
  margin-top: -375px;
  background-repeat: no-repeat;
}

#player-battlefield .flying {
  box-shadow: 20px 60px 4px rgba(0, 0, 0, 0.4);
  transform: translateZ(20px);
}

#opponent-battlefield .flying {
  box-shadow: -20px -60px 4px rgba(0, 0, 0, 0.4);
  transform: translateY(20px);
}

#player-battlefield .tapped, #opponent-battlefield .tapped {
  transform: rotateZ(90deg);
  margin-right: 40px;
  margin-left: 40px;
}

#player-battlefield .tapped.flying {
  transform: rotateZ(90deg) translateZ(20px);
}

#opponent-battlefield .tapped.flying {
  transform: rotateZ(90deg) translateY(20px);
}

#player-battlefield .frontend-tapped, #opponent-battlefield .frontend-tapped {
  transform: rotateZ(75deg);
}

#player-battlefield .frontend-tapped.flying {
  transform: rotateZ(75deg) translateZ(20px);
}

#opponent-battlefield .frontend-tapped.flying {
  transform: rotateZ(75deg) translateY(20px);
}

#player-hand {
  bottom: 40px;
  left: 1%;
  width: 99%;
  z-index: 2;
}

#opponent-hand {
  top: -120px;
  transform: scale(0.5,0.5);
  z-index: 1;
}

.hand {
  position: absolute;
  justify-content: center;
  display: flex;
  width: 100%;
}

#user-actions {
  position: absolute;
  width: 50px;
  height: 200px;
  bottom: 0;
  left: 0;
  z-index: 3;
}

#user-actions button {
  width: 50px;
  height: 50px;
  background-color: skyblue;
  border-radius: 25px;
  margin-bottom: 20px;
  margin-left: -5px;
  font-size: x-large;
  cursor: pointer;
}

#user-actions button:disabled {
  cursor: default;
  background-color: cadetblue;
}

#status-message {
  position: absolute;
  bottom: 0;
  width: 94%;
  left: 3%;
  z-index: 3;
  background-color: darkgrey;
  padding: 2px 10px 2px 10px;
  border: 1px solid black;
  font-size: large;
}

#message {
  position: absolute;
  z-index: 5;
  top: 25%;
  left: 25%;
  width: 50%;
  height: 30%;
  background-color: darkgrey;
  padding: 2em;
  border: 1px solid black;
  font-size: large;
  opacity: 1;
}

#message-close {
  position: absolute;
  font-size: x-large;
  top: 0;
  right: 2px;
  cursor: pointer;
}

#player-battlefield {
  bottom: 10%;
}

#opponent-battlefield {
  position: absolute;
  top: 2%;
  transform: rotate(180deg);
}

.battlefield {
  position: absolute;
  left: 20%;
  width: 80%;
}

.battlefield-area {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  min-height: 250px;
}

.opponent-battlefield .combat-line {
  padding-left: 20%;
}

.player-battlefield .combat-line {
  padding-right: 20%;
}

.combat-line span {
  position: absolute;
}

#player-graveyard {
  bottom: 5%;
}

#opponent-graveyard {
  top: 5%;
  transform: rotate(180deg);
  justify-content: flex-end;
}

.graveyard {
  position: absolute;
  left: 3%;
  width: 20%;
  height: 20%;
  display: flex;
}

.graveyard div {
  margin-left: -160px;
}

.graveyard div:first-child {
  margin-left: 0;
}

#player-library {
  bottom: 30%;
}

#opponent-library {
  top: 30%;
}

.player-library {
  position: absolute;
  left: 10%;
}

#player-library .card, #opponent-library .card{
  margin: 0;
}

#player-library .card-bottom-thickness, #opponent-library .card-bottom-thickness {
  background-color: #1E211A;
  position: absolute;
  width: 180px;
  transform-style: preserve-3d;
}

#player-library .card-right-thickness, #opponent-library .card-right-thickness {
  background-color: #252821;
  position: absolute;
  height: 250px;
  transform-style: preserve-3d;
}

#player-info {
  bottom: 35%;
}

#opponent-info {
  top: 40%;
}

.player-info {
  position: absolute;
  transform-style: preserve-3d;
  background-image: url("/img/materials/paper.jpg");
  width: 12%;
  height: 40px;
  right: 1%;
  transform: rotateX(-35deg) translateZ(20px);
  padding: 10px 20px 10px 20px;
  font-size: xx-large;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.player-info.active-player span:first-child {
  text-decoration: underline;
}

.player-info.inactive-player {
  color: grey;
}

.player-info.winner, .player-info.inactive-player.winner {
  color: green;
}

#player-info:after, #opponent-info:after {
  content: '';
  position: absolute;
  transform-style: preserve-3d;
  background-image: url("/img/materials/paper.jpg");
  filter: brightness(50%);
  width: 100%;
  height: 40px;
  bottom: 40px;
  left: 0;
  transform: rotateX(-60deg) translateY(20px);
}

.non-positive {
  color: red;
}

#turn-phases {
  position: absolute;
  background-image: url('/img/materials/silver.jpg');
  right: 0;
  bottom: 44%;
  width: 30%;
  height: 8%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: xx-large;
  padding-left: 5px;
  padding-right: 5px;
  transform-style: preserve-3d;
  transform: translateZ(10px);
}

#turn-phases::after {
  content: '';
  position: absolute;
  background-image: url('/img/materials/silver.jpg');
  right: 0;
  bottom: -5px;
  width: 100%;
  height: 10px;
  background-color: #637485;
  transform: rotateX(-90deg) translateY(5px);
  filter: brightness(70%);
}

#turn-phases::before {
  content: '';
  position: absolute;
  background-image: url('/img/materials/silver.jpg');
  left: -5px;
  bottom: 0;
  width: 10px;
  height: 100%;
  background-color: #6d7e8f;
  transform: rotateY(90deg) translateX(5px);
  filter: brightness(85%);
}

#turn-phases span {
  padding: 6px;
  margin: 6px;
  display: inline-block;
}

#turn-phases span {
  background-color: darkolivegreen;
}

#turn-phases span.active {
  background-color: lawngreen;
}

#turn-phases span.active-for-player:before {
  content: 'o';
  position: absolute;
  bottom: 0;
  text-align: center;
  margin-left: 10px;
}

#turn-phases span.active-for-opponent:before {
  content: 'o';
  position: absolute;
  top: 0;
  text-align: center;
  margin-left: 10px;
}

#stack {
  position: absolute;
  left: 0;
  bottom: 42%;
  transform-style: preserve-3d;
  transform: translateZ(30px);
}

#stack div:first-child {
  box-shadow: 50px 100px 4px rgba(0, 0, 0, 0.4);
}

#table {
  background-image: url("/img/materials/wood.jpg");
  position: absolute;
  width: 180%;
  left: -40%;
  height: 200%;
  bottom: -35%;
  z-index: 0;
  transform: rotateX(45deg) scale(0.5, 0.5) translateZ(-1px);
  transform-style: preserve-3d;
}

#table:after {
  content: '';
  background-image: url("/img/materials/wood.jpg");
  position: absolute;
  width: 100%;
  height: 80px;
  bottom: -40px;
  z-index: 0;
  transform: rotateX(-90deg) translateY(40px) translateZ(-1px);
  filter: brightness(50%);
}

